--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
     <title>Document</title>
 </head>
 <body>
-    <nav>
-        <div><img src="" alt="logo"></div>
-        <div><p>Home</p>
+    <nav class="container m-auto flex justify-evenly bg-red-500">
+        <div><h1>MyTune</h1></div>
+        <div class="flex">
+            <p>Home</p>
         <p>About</p>
         <p>Contact us</p>
         <p>login</p></div>
